Refactor: Add metadata to markup

--- a/tailwind_contact_card/index.html
+++ b/tailwind_contact_card/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" >
   <head>
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+
     <title>Tailwind Contact Card Clone</title>
+
+    <meta name="description" content="Copying Tailwind library contact card shown in the documentation, with raw css" >
+    <meta name="keywords" content="tailwind css, css, contact card ui, contact card css" >
+
     <link rel="stylesheet" type="text/css" href="main.css" >
   </head>
 
@@ -17,7 +24,7 @@
       </div>
 
     </div>
-    
+
   </body>
 
 </html>
