--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -22,13 +22,13 @@
           <li>Food Delivery</li>
           <li>How it Works</li>
           <li>Our Cities</li>
-          <li>Signup</li>
+          <li>Sign up</li>
         </ul>
 
       </nav>
 
       <h1>
-        <span>Goodbye junkfood.</span>
+        <span>Goodbye junk food.</span>
         <span>Hello super healthy meals.</span>
 
       </h1>
@@ -36,7 +36,7 @@
       <a href="#" class="btn btn-cta">I'm Hungry</a>
       <a href="#" class="btn btn-orange">Show me more</a>
 
-  </header>
+    </header>
 
   </body>
 
