Refactor: Add class to header title

--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -27,7 +27,7 @@
 
       </nav>
 
-      <h1>
+      <h1 class="header-txt-container" >
         <span>Goodbye junk food.</span>
         <span>Hello super healthy meals.</span>
 
