Feat: Add google fonts

--- a/omnifood/index.html
+++ b/omnifood/index.html
@@ -9,7 +9,8 @@
     <meta name="description" content="Omnifood site clone" >
     <meta name="keywords" content="omnifood, css, modern ui" >
 
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=lato:100,300,400,300italic" type="text/css" >
+    <link rel="stylesheet" href="main.css" type="text/css" >
 
   </head>
 
